welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:5: error: not found: value maxint
    maxint=max
    ^max2Value:10: error: not found: value maxint
      max2=maxint
           ^